# platform.core.telephony.tel-plugin-imc

./: 0001-SMS-Enable-TON-NPI-with-Get-SCA.patch  CMakeLists.txt  Makefile.manual  README
debian/: changelog  control  rules  tel-plugin-imc.install.in  tel-plugin-imc.postinst
include/: imc_call.h  imc_common.h  imc_dispatch.h  imc_gps.h  imc_modem.h  imc_network.h  imc_phonebook.h  imc_ps.h  imc_sap.h  imc_sat.h  imc_sim.h  imc_sms.h  imc_ss.h  s_call.h  s_common.h  s_dispatch.h  s_gps.h  s_modem.h  s_network.h  s_phonebook.h  s_ps.h  s_sap.h  s_sat.h  s_sim.h  s_sms.h  s_ss.h  tel-plugin-imc.manifest
include/common/: TelErr.h
include/nvm/: nvm.h
packaging/: 0001-desc-CP-name-is-imc-pr3-for-Intel-device.patch  0002-s_modem-CGMR-response-parsing-is-compatible-with-IMC.patch  0003-s-modem-Cleanup.patch  0004-s-modem-Add-notification-hook-for-SIM-status.patch  0005-s-sim-Query-SIM-state-when-modem-is-powered-up.patch  0006-common-Fix-warning-errors.patch  0007-s_sim-Get-the-SIM-type-when-SIM-is-ready.patch  0008-Fix-SCA-service-center-address-length-checking-error.patch  0009-s_modem-Add-XGENDATA-query-to-get-firmware-informati.patch  0010-s_sim-Extend-XSIMSTATE-parsing-to-get-SMS-service-st.patch  0011-set-modem-power-saving-mode.patch  0012-Fix-EFsmsp-size-error.patch  0013-s_call-use-hal-set-sound-path-function.patch  0014-Add-core-objects-and-link-them-to-HAL.patch  0015-Change-the-way-imc-plugin-is-initialized.patch  0016-s_ps-Remove-plateform-dependencies-to-setup-pdp-cont.patch  0017-Fix-the-issue-that-system-is-waken-up-by-modem-frequ.patch  0018-Configure-modem-I2s1-to-8khz-mono-if-routing-to-blue.patch  0019-s_sat.c-Fix-envelope-cmd-and-enable-Setup-Event-List.patch  0020-s_sim.c-Fix-get-lock-info.patch  0021-s_sim-Fix-multiple-sim-facility-status-query.patch  0023-s_network.c-By-default-display-the-plmn-in-case-SPN-.patch  0024-Use-plugin-mfld-blackbay.patch  0025-Fix-integration-issue.patch  tel-plugin-imc.changes  tel-plugin-imc.spec
reference_src/: s_common.c  s_gps.c  s_network.c  s_sms.c
reference_src/nvm/: nvm.c
res/: convert_to_sql.c  wiki_mcc_mnc_oper_list.csv  wiki_mcc_mnc_oper_list.db  wiki_mcc_mnc_oper_list.sql
src/: desc-imc.c  desc.c  desc_imc.c  imc_call.c  imc_common.c  imc_gps.c  imc_modem.c  imc_network.c  imc_phonebook.c  imc_ps.c  imc_sap.c  imc_sat.c  imc_sim.c  imc_sms.c  imc_ss.c  s_call.c  s_common.c  s_gps.c  s_modem.c  s_network.c  s_phonebook.c  s_ps.c  s_sap.c  s_sat.c  s_sim.c  s_sms.c  s_ss.c
src/nvm/: nvm.c
